# philosophers

./: CMakeLists.txt  README.md
src/: Forks.cpp  Forks.h  Philosophers.cpp  Philosophers.h  ThreadSimulation.cpp  ThreadSimulation.h  ThreadSimulation_test.cpp  main.cpp
